--- a/AUTHORS
+++ b/AUTHORS
@@ -55,6 +55,7 @@ Chad Austin <chad@chadaustin.me>
 Changli Gao <xiaosuo@gmail.com>
 Christian Menges <christian.menges@tum.de>
 Christopher Harrison <ch12@sanger.ac.uk>
+Ciaran <ciaran@hypokrites.me>
 Consus <consus@gmx.com>
 Craig Chi <craig08@users.noreply.github.com>
 Csaba Henk <csaba.henk@creo.hu>
@@ -90,10 +91,12 @@ Forty-Bot <Forty-Bot@users.noreply.github.com>
 Frank Dinoff <fdinoff@google.com>
 Giulio Benetti <giulio.benetti@benettiengineering.com>
 Giuseppe Scrivano <giuseppe@scrivano.org>
+Goswin von Brederlow <goswin-v-b@web.de>
 guraga <rulumasi@dodsi.com>
 HazelFZ <xfzfygz@gmail.com>
 Heiko Becker <heirecka@exherbo.org>
 Hendrik Brueckner <brueckner@linux.vnet.ibm.com>
+HereThereBeDragons <HereThereBeDragons@users.noreply.github.com>
 Hookey <Hookey@users.noreply.github.com>
 human <human@neet.fi>
 Ikey Doherty <michael.i.doherty@intel.com>
@@ -118,6 +121,7 @@ Kangjing "Chaser" Huang <huangkangjing@gmail.com>
 Ken Schalk <kcs-github@xorian.net>
 Kevin Vigor <kvigor@fb.com>
 Kirill Smelkov <kirr@nexedi.com>
+Kyle Lippincott <spectral@google.com>
 Laszlo Boszormenyi (GCS) <gcs@debian.org>
 Laszlo Papp <ext-laszlo.papp@nokia.com>
 Laurent Bigonville <bigon@users.noreply.github.com>
@@ -189,6 +193,7 @@ Tej Chajed <tchajed@mit.edu>
 tenzap <46226844+tenzap@users.noreply.github.com>
 therealneworld@gmail.com <therealneworld@gmail.com>
 Tobias Nießen <tniessen@users.noreply.github.com>
+Tofik Sonono <tofik.sonono@intel.com>
 Tomasz Kulasek <34129113+tkulasek@users.noreply.github.com>
 Tom Callaway <spot@fedoraproject.org>
 Tom Callaway <spotrh@gmail.com>
@@ -199,6 +204,8 @@ Vivek Goyal <vgoyal@redhat.com>
 William Woodruff <william@yossarian.net>
 Winfried Koehler <w_scan@gmx-topmail.de>
 winndows <winndows@163.com>
+y <tofik.sonono@intel.com>
 Yuri Per <yuri@acronis.com>
+Zhansong Gao <zhsgao@hotmail.com>
 Zhiqiang Liu <liuzhiqiang26@huawei.com>
 zsugabubus <zsugabubus@users.noreply.github.com>
