--- a/AUTHORS
+++ b/AUTHORS
@@ -162,6 +162,7 @@ Peter Lemenkov <lemenkov@gmail.com>
 philmd <philmd@users.noreply.github.com>
 Przemyslaw Pawelczyk <przemoc@gmail.com>
 Przemysław Pawełczyk <przemoc@gmail.com>
+psykose <alice@ayaya.dev>
 Ratna_Bolla@dell.com <Ratna_Bolla@dell.com>
 Rethan <359062468@qq.con>
 Reuben Hawkins <reubenhwk@gmail.com>
