--- a/AUTHORS
+++ b/AUTHORS
@@ -205,6 +205,7 @@ Vivek Goyal <vgoyal@redhat.com>
 William Woodruff <william@yossarian.net>
 Winfried Koehler <w_scan@gmx-topmail.de>
 winndows <winndows@163.com>
+Xiubo Li <xiubli@redhat.com>
 y <tofik.sonono@intel.com>
 Yuri Per <yuri@acronis.com>
 Zhansong Gao <zhsgao@hotmail.com>
