--- a/AUTHORS
+++ b/AUTHORS
@@ -160,6 +160,7 @@ Olivier Blin <olivier.blin@softathome.com>
 pablomh <pablomh@gmail.com>
 Peter Lemenkov <lemenkov@gmail.com>
 philmd <philmd@users.noreply.github.com>
+Pierre Labastie <pierre.labastie@neuf.fr>
 Przemyslaw Pawelczyk <przemoc@gmail.com>
 Przemysław Pawełczyk <przemoc@gmail.com>
 psykose <alice@ayaya.dev>
@@ -180,6 +181,7 @@ Sam Huffman <40582525+samh-sifive@users.noreply.github.com>
 Sam James <sam@gentoo.org>
 Sam Stuewe <halosghost@archlinux.info>
 Sangwoo Moon <swmoon00@gmail.com>
+Sarath Lakshman <sarath@couchbase.com>
 Sargun Dhillon <sargun@sargun.me>
 scosu <mpargmann@allfex.org>
 Scott Worley <scottworley@scottworley.com>
