--- a/AUTHORS
+++ b/AUTHORS
@@ -2,7 +2,7 @@ Current Maintainers
 ------------------
 
 Bernd Schubert <bernd.schubert@fastmail.fm>
-Ashley M Pittman <ashley.m.pittman@intel.com>
+Ashley Pittman <ashley@pittman.co.uk>
 Antonio SJ Musumeci <trapexit@spawn.link>
 
 
