Update AUTHORS for 3.17 and add script for that
Signed-off-by: Bernd Schubert <bernd@bsbernd.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -231,3 +231,31 @@ Yuri Per <yuri@acronis.com>
 Zhansong Gao <zhsgao@hotmail.com>
 Zhiqiang Liu <liuzhiqiang26@huawei.com>
 zsugabubus <zsugabubus@users.noreply.github.com>
+
+# New authors since fuse-3.16.2
+farlongsignal <141166749+farlongsignal@users.noreply.github.com>
+yangyun50 <149988609+yangyun50@users.noreply.github.com>
+bigbrotherwei <1965867461@qq.com>
+Caian Benedicto <2220062+Caian@users.noreply.github.com>
+desertwitch <24509509+desertwitch@users.noreply.github.com>
+SteveYang <40466358+SteveY4ng@users.noreply.github.com>
+FredyVia <942513309@qq.com>
+legezywzh <94814730+legezywzh@users.noreply.github.com>
+CismonX <admin@cismon.net>
+amitgeron <amit.geron@gmail.com>
+Bernd Schubert <bernd@bsbernd.com>
+Daniel Rosenberg <drosen@google.com>
+Horst Birthelmer <hbirthelmer@ddn.com>
+Joanne Koong <joannelkoong@gmail.com>
+Josef Bacik <josef@toxicpanda.com>
+Matthew <matthew@matthew-cash.com>
+gandalfs_cat <meow@kittcat.dev>
+MJ Harvey <mharvey@jumptrading.com>
+Nils <nils@nilsand.re>
+Norman Wilson <norman@teach.cs.toronto.edu>
+leipeng <peng@topling.cn>
+Vladimir Serbinenko <phcoder@gmail.com>
+George Hilliard <thirtythreeforty@gmail.com>
+Tyler Hall <tylerwhall@gmail.com>
+yangyun <yangyun50@huawei.com>
+Abhishek <abhi_45645@yahoo.com>
