--- a/AUTHORS
+++ b/AUTHORS
@@ -259,3 +259,7 @@ George Hilliard <thirtythreeforty@gmail.com>
 Tyler Hall <tylerwhall@gmail.com>
 yangyun <yangyun50@huawei.com>
 Abhishek <abhi_45645@yahoo.com>
+
+# New authors since 666b2c3fa5159e3c72a0d08117507475117c9319
+Luis Henriques <luis@igalia.com>
+Zegang <zegang.luo@qq.com>
