--- a/AUTHORS
+++ b/AUTHORS
@@ -260,6 +260,10 @@ Tyler Hall <tylerwhall@gmail.com>
 yangyun <yangyun50@huawei.com>
 Abhishek <abhi_45645@yahoo.com>
 
-# New authors since 666b2c3fa5159e3c72a0d08117507475117c9319
+# New authors since fuse-3.17.0
 Luis Henriques <luis@igalia.com>
 Zegang <zegang.luo@qq.com>
+
+# New authors since fuse-3.17.1-rc0
+Maksim Harbachou <maksim.harbachou@resilio.com>
+Vassili Tchersky <vt+git@vbcy.org>
