--- a/AUTHORS
+++ b/AUTHORS
@@ -267,3 +267,7 @@ Zegang <zegang.luo@qq.com>
 # New authors since fuse-3.17.1-rc0
 Maksim Harbachou <maksim.harbachou@resilio.com>
 Vassili Tchersky <vt+git@vbcy.org>
+
+# New authors since fuse-3.17.1-rc1
+jnr0006 <jacob.nick.riley@gmail.com>
+Vassili Tchersky <vt+git@vbc.su>
