--- a/AUTHORS
+++ b/AUTHORS
@@ -271,3 +271,7 @@ Vassili Tchersky <vt+git@vbcy.org>
 # New authors since fuse-3.17.1-rc1
 jnr0006 <jacob.nick.riley@gmail.com>
 Vassili Tchersky <vt+git@vbc.su>
+
+# New authors since fuse-3.17.1
+swj <1186093704@qq.com>
+Ben Dooks <ben.dooks@codethink.co.uk>
