Update AUTHORS file for 3.17.3

--- a/AUTHORS
+++ b/AUTHORS
@@ -275,3 +275,6 @@ Vassili Tchersky <vt+git@vbc.su>
 # New authors since fuse-3.17.1
 swj <1186093704@qq.com>
 Ben Dooks <ben.dooks@codethink.co.uk>
+
+# New authors since fuse-3.17.2
+Long Li <leo.lilong@huawei.com>
