--- a/AUTHORS
+++ b/AUTHORS
@@ -278,3 +278,6 @@ Ben Dooks <ben.dooks@codethink.co.uk>
 
 # New authors since fuse-3.17.2
 Long Li <leo.lilong@huawei.com>
+
+# New authors since fuse-3.17.3
+Georgi Valkov <gvalkov@gmail.com>
